JDKObsolete Fixes